Add init script that works with Ubuntu
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@127580 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/debian/install
+++ b/debian/install
@@ -1,4 +1,4 @@
 *.js local node_modules services devices nhome.ico package.json opt/nhome/
 debian/*.desktop /usr/share/applications/
 debian/*.service /lib/systemd/system/
-debian/*.init /etc/init.d/
+debian/nhome /etc/init.d/
