Re-arrange directory structure more neatly
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@127611 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/debian/install
+++ b/debian/install
@@ -1,4 +1,4 @@
-server.js lib local node_modules nw nhome.ico package.json LICENSE GPLv3.txt opt/nhome/
+server.js lib local node_modules nwjs nhome.ico package.json LICENSE GPLv3.txt opt/nhome/
 debian/*.desktop /usr/share/applications/
 debian/*.service /lib/systemd/system/
 debian/nhome /etc/init.d/
